--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>ReadingCircle</title>
+        <title>Hackatown</title>
         <base href="/">
         <link rel="stylesheet" type="text/css" href="./node_modules/materialize-css/dist/css/materialize.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,7 +12,7 @@
         <meta charset="utf-8">
     </head>
 
-    <body ng-app="readingcircle-app" class="noselect">
+    <body ng-app="hackatown" class="noselect">
         <div ng-include="'./views/partials/navbar.html'"></div>
         <div class="page-content">
             <div class="ng-view"></div>
@@ -36,7 +36,6 @@
         <script type="text/javascript" src="./services/traduction.js"></script>
         <script type="text/javascript" src="./services/api.js"></script>
         <!-- DIRECTIVES -->
-        <script type="text/javascript" src="./directives/loading.js"></script>
     </body>
 
 </html>
