activity list module

--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
         <script src="https://content.jwplatform.com/libraries/xyLZvDGE.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
         <script type="text/javascript" src="./app.js"></script>
+        <!-- MODULES -->
+        <script type="text/javascript" src="./components/ListViewComponent/activitylist.module.js"></script>
         <!-- CONTROLLERS -->
         <script type="text/javascript" src="./controllers/HomeController.js"></script>
         <script type="text/javascript" src="./controllers/NavbarController.js"></script>
+        <script type="text/javascript" src="./components/ListViewComponent/activitylist.controller.js"></script>
         <!-- SERVICES -->
         <script type="text/javascript" src="./services/traduction.js"></script>
         <script type="text/javascript" src="./services/api.js"></script>
-        <!-- DIRECTIVES -->
+        <!-- COMPONENTS -->
+        <script type="text/javascript" src="./components/ListViewComponent/activitylist.component.js"></script>
     </body>
 
 </html>
