--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
         <script type="text/javascript" src="./app.js"></script>
         <!-- MODULES -->
         <script type="text/javascript" src="./components/ListViewComponent/activitylist.module.js"></script>
+        <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.module.js"></script>
         <!-- CONTROLLERS -->
         <script type="text/javascript" src="./controllers/HomeController.js"></script>
         <script type="text/javascript" src="./controllers/NavbarController.js"></script>
         <script type="text/javascript" src="./components/ListViewComponent/activitylist.controller.js"></script>
+        <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.controller.js"></script>
         <!-- SERVICES -->
         <script type="text/javascript" src="./services/traduction.js"></script>
         <script type="text/javascript" src="./services/api.js"></script>
         <!-- COMPONENTS -->
         <script type="text/javascript" src="./components/ListViewComponent/activitylist.component.js"></script>
+        <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.component.js"></script>
     </body>
 
 </html>
