--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="./styles/main.css">
         <link rel="stylesheet" type="text/css" href="./styles/toaster.css">
         <link rel="stylesheet" type="text/css" href="./components/BackgroundVideoComponent/backgroundVideo.css">
+        <link rel="stylesheet" type="text/css" href="components/ListViewComponent/activitylist.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
     </head>
