--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script type="text/javascript" src="./node_modules/angular-materialize/src/angular-materialize.min.js"></script>
         <script type="text/javascript" src="./node_modules/jquery-smooth-scroll/jquery.smooth-scroll.min.js"></script>
         <script type="text/javascript" src="./node_modules/blueimp-md5/js/md5.min.js"></script>
+        <script type="text/javascript" src="./node_modules/qrcode-generator/qrcode.js"></script>
         <script src="https://content.jwplatform.com/libraries/xyLZvDGE.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
         <script type="text/javascript" src="./app.js"></script>
