--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
         <script type="text/javascript" src="./components/ListViewComponent/activitylist.module.js"></script>
         <script type="text/javascript" src="./components/GridViewComponent/activitygrid.module.js"></script>
         <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.module.js"></script>
+        <script type="text/javascript" src="./components/CouponRedeemComponent/couponredeem.module.js"></script>
         <!-- CONTROLLERS -->
         <script type="text/javascript" src="./controllers/HomeController.js"></script>
         <script type="text/javascript" src="./controllers/NavbarController.js"></script>
         <script type="text/javascript" src="./components/ListViewComponent/activitylist.controller.js"></script>
         <script type="text/javascript" src="./components/GridViewComponent/activitygrid.controller.js"></script>
         <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.controller.js"></script>
+        <script type="text/javascript" src="./components/CouponRedeemComponent/couponredeem.controller.js"></script>
         <!-- SERVICES -->
         <script type="text/javascript" src="./services/traduction.js"></script>
         <script type="text/javascript" src="./services/api.js"></script>
@@ -48,6 +50,7 @@
         <script type="text/javascript" src="./components/ListViewComponent/activitylist.component.js"></script>
         <script type="text/javascript" src="./components/GridViewComponent/activitygrid.component.js"></script>
         <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.component.js"></script>
+        <script type="text/javascript" src="./components/CouponRedeemComponent/couponredeem.component.js"></script>
     </body>
 
 </html>
