--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <script type="text/javascript" src="./components/FacebookButtonComponent/facebookButton.module.js"></script>
         <!-- CONTROLLERS -->
         <script type="text/javascript" src="./controllers/HomeController.js"></script>
+        <script type="text/javascript" src="./controllers/LoginController.js"></script>
         <script type="text/javascript" src="./controllers/NavbarController.js"></script>
+
         <script type="text/javascript" src="./components/ListViewComponent/activitylist.controller.js"></script>
         <script type="text/javascript" src="./components/GridViewComponent/activitygrid.controller.js"></script>
         <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.controller.js"></script>
