--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/main.css">    
     <link rel="stylesheet" href="css/responsive.css">
 
+
   </head>
   <body>
       <div class="menu-wrap">
@@ -59,12 +60,12 @@
       </div>      
   	<!-- Header Section Start -->
 
-    <header id="video-area" data-stellar-background-ratio="0.5">    
+    <header id="video-area" data-stellar-background-ratio="0.5">
       <div id="block" data-vide-bg="video/video"></div>
       <div class="fixed-top">
           <div class="container">
             <div class="logo-menu">
-              <a href="index.html" class="logo"><span class="lnr lnr-diamond"></span> CRYSTAL</a>
+              <a href="index.html" class="logo"><span class="lnr lnr-diamond"></span> Hi Squad</a>
               <button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>    
             </div>           
           </div>
@@ -74,9 +75,6 @@
         <div class="row justify-content-md-center">
           <div class="col-md-10">
             <div class="contents text-center">
-              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Meet</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Responsive Video Background Website Template Based on Bootstrap 4 to Create Complete Business Website in Minutes</p>
-              <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms"><i class="lnr lnr-download"></i> Download</a>
             </div>
           </div>
         </div> 
