--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="css/menu_sideslide.css">
     <link rel="stylesheet" href="css/main.css">    
     <link rel="stylesheet" href="css/responsive.css">
-
+    <link rel="stylesheet" href="https://developers.google.com/maps/documentation/javascript/demos/demos.css">
+    <link rel="stylesheet" href="css/map-icons.min.css">
     <link rel="stylesheet" href="components/ListViewComponent/activitylist.css">
 
   </head>
@@ -158,83 +159,19 @@
     <!-- Features Section Start -->
     <section id="features" class="section" data-stellar-background-ratio="0.2">
       <div class="container">
-        <div class="section-header">          
-          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Amazing <span>Features</span></h2>
+        <div class="section-header">
+          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">View <span>Venues</span></h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy <br> nibh euismod tincidunt ut laoreet dolore magna.</p>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Bouncing marker means that there's a promotion available near you for you and your group.</p>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="content-left text-right wow fadeInLeft animated" data-wow-offset="10">
-              <div class="box-item left">
-                <span class="icon">
-                  <i class="lnr lnr-rocket"></i>
-                </span>
-                <div class="text">
-                  <h4>Bootstrap 4 Based</h4>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-              </div>
-              <div class="box-item left">
-                <span class="icon">
-                  <i class="lnr lnr-laptop-phone"></i>
-                </span>
-                <div class="text">
-                  <h4>Fully Responsive</h4>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-              </div>
-              <div class="box-item left">
-                <span class="icon">
-                  <i class="lnr lnr-cog"></i>
-                </span>
-                <div class="text">
-                  <h4>HTML5 & CSS3</h4>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="show-box wow fadeInDown animated" data-wow-offset="10">
-              <img src="img/features/feature.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="content-right text-left wow fadeInRight animated" data-wow-offset="10">
-              <div class="box-item right">
-                <span class="icon">
-                  <i class="lnr lnr-camera-video"></i>
-                </span>
-                <div class="text">
-                  <h4>Video Background</h4>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                </div>
-              </div>
-              <div class="box-item right">
-                <span class="icon">
-                  <i class="lnr lnr-magic-wand"></i>
-                </span>
-                <div class="text">
-                  <h4>Parallax Sections</h4>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-              </div>
-              <div class="box-item right">
-                <span class="icon">
-                  <i class="lnr lnr-spell-check"></i>
-                </span>
-                <div class="text">
-                  <h4>Ajax Contact Form</h4>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-              </div>
-            </div>
+          <div class="col-12">
+            <map></map>
           </div>
         </div>
       </div>
     </section>
-    <!-- Features Section End -->    
+    <!-- Features Section End -->
 
     <!-- Start Video promo Section -->
     <section class="video-promo section" data-stellar-background-ratio="0.5">
@@ -527,7 +464,6 @@
       </div>
     </div>
     <!-- testimonial Section Start -->
-
     <!-- Download Section Start -->
     <section id="download" class="section">
       <div class="container">
@@ -748,6 +684,7 @@
     <!-- MODULES -->
     <script type="text/javascript" src="./components/ListViewComponent/activitylist.module.js"></script>
     <script type="text/javascript" src="./components/GridViewComponent/activitygrid.module.js"></script>
+    <script type="text/javascript" src="./components/GoogleMapComponent/map.module.js"></script>
     <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.module.js"></script>
     <script type="text/javascript" src="./components/CouponRedeemComponent/couponredeem.module.js"></script>
     <script type="text/javascript" src="./components/FacebookButtonComponent/facebookButton.module.js"></script>
@@ -758,6 +695,7 @@
 
     <script type="text/javascript" src="./components/ListViewComponent/activitylist.controller.js"></script>
     <script type="text/javascript" src="./components/GridViewComponent/activitygrid.controller.js"></script>
+    <script type="text/javascript" src="./components/GoogleMapComponent/map.controller.js"></script>
     <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.controller.js"></script>
     <script type="text/javascript" src="./components/CouponRedeemComponent/couponredeem.controller.js"></script>
     <script type="text/javascript" src="./components/FacebookButtonComponent/facebookButton.controller.js"></script>
@@ -767,6 +705,7 @@
     <!-- COMPONENTS -->
     <script type="text/javascript" src="./components/ListViewComponent/activitylist.component.js"></script>
     <script type="text/javascript" src="./components/GridViewComponent/activitygrid.component.js"></script>
+    <script type="text/javascript" src="./components/GoogleMapComponent/map.component.js"></script>
     <script type="text/javascript" src="./components/BackgroundVideoComponent/backgroundVideo.component.js"></script>
     <script type="text/javascript" src="./components/CouponRedeemComponent/couponredeem.component.js"></script>
     <script type="text/javascript" src="./components/FacebookButtonComponent/facebookButton.component.js"></script>
@@ -791,6 +730,8 @@
     <script type="text/javascript" src="./js/form-validator.min.js"></script>
     <script type="text/javascript" src="./js/contact-form-script.js"></script>     
     <script type="text/javascript" src="./js/main.js"></script>
-    
+    <script src="./js/map-icons.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-ruGMWt2QHUNlkawd7ZngZ0wtDzKNIEw&callback=initMap"
+              async defer></script>
   </body>
 </html>
