--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>Crystal - Free Video Background Website Template</title>
+    <title>HiSquad!</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -27,7 +27,7 @@
 
   </head>
   <body ng-app="hackatown">
-      <div class="menu-wrap">
+      <!-- <div class="menu-wrap">
         <nav class="menu navbar">
           <div class="icon-list navbar-collapse">
             <ul class="navbar-nav">
@@ -59,7 +59,7 @@
           </div>
         </nav> 
         <button class="close-button" id="close-button"><i class="lnr lnr-cross"></i></button>
-      </div>      
+      </div>  -->     
   	<!-- Header Section Start -->
 
     <header id="video-area" data-stellar-background-ratio="0.5">    
@@ -67,8 +67,8 @@
       <div class="fixed-top">
           <div class="container">
             <div class="logo-menu">
-              <a href="index.html" class="logo"><span class="lnr lnr-diamond"></span> CRYSTAL</a>
-              <button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>    
+              <a href="index.html" class="logo"><img src="./img/hackatown2018.png" style="height:60px;width: 60px;"></img>HiSquad!</a>
+              <!-- button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>  -->   
             </div>           
           </div>
       </div>
@@ -78,8 +78,8 @@
           <div class="col-md-10">
             <div class="contents text-center">
               <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Meet</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Responsive Video Background Website Template Based on Bootstrap 4 to Create Complete Business Website in Minutes</p>
-              <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms"><i class="lnr lnr-download"></i> Download</a>
+              <!-- <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Responsive Video Background Website Template Based on Bootstrap 4 to Create Complete Business Website in Minutes</p> -->
+              <!-- <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms"><i class="lnr lnr-download"></i> Download</a> -->
             </div>
           </div>
         </div> 
@@ -88,70 +88,16 @@
     <!-- Header Section End --> 
 
 
-    <!-- Services Section Start -->
+    <!-- Categories Section Start -->
     <section id="services" class="section">
       <div class="container">
         <div class="section-header">          
-          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Our <span>Services</span></h2>
+          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"><span>Categories</span></h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy <br> nibh euismod tincidunt ut laoreet dolore magna.</p>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">We found these activities for you and your friends nearby! <br> Choose a category to explore more.</p>
         </div>
-        <div class="row">
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
-              <div class="icon">
-                <i class="lnr lnr-pencil"></i>
-              </div>
-              <h4>Content Writing</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="0.4s">
-              <div class="icon">
-                <i class="lnr lnr-cog"></i>
-              </div>
-              <h4>Web Development</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="0.6s">
-              <div class="icon">
-                <i class="lnr lnr-chart-bars"></i>
-              </div>
-              <h4>Graphic Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
-              <div class="icon">
-                <i class="lnr lnr-layers"></i>
-              </div>
-              <h4>UI/UX Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="1s">
-              <div class="icon">
-                <i class="lnr lnr-tablet"></i>
-              </div>
-              <h4>App Development</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
-              <div class="icon">
-                <i class="lnr lnr-briefcase"></i>
-              </div>
-              <h4>Digital Marketing</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
-            </div>
-          </div>
-        </div>
+        <activity-grid ng-if="!categorySelected"></activity-grid>
+        <activity-list ng-if="categorySelected"></activity-list>
       </div>
     </section>
     <!-- Services Section End -->
@@ -718,8 +664,6 @@
       </div>
     </footer>
     <!-- Footer Section End -->
-
-    <activity-list></activity-list>
 
     <!-- Go To Top Link -->
     <a href="#" class="back-to-top">
