--- a/index.html
+++ b/index.html
@@ -68,10 +68,20 @@
       <div id="block" data-vide-bg="video/video"></div>
       <div class="fixed-top">
           <div class="container">
-            <div class="logo-menu">
+            <div class="logo-menu menu-item">
               <a href="index.html" class="logo"><img src="./img/hackatown2018.png" style="height:60px;width: 60px;"></img>HiSquad!</a>
-              <!-- button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>  -->   
-            </div>           
+              <!-- button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>  -->
+            </div>
+            <div class="dropdown menu-item ">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Squads
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Job</a>
+                <a class="dropdown-item" href="#">Hockey</a>
+                <a class="dropdown-item" href="#">School</a>
+              </div>
+            </div>
           </div>
       </div>
       <div class="overlay overlay-2"></div>      
@@ -79,10 +89,7 @@
         <div class="row justify-content-md-center">
           <div class="col-md-10">
             <div class="contents text-center">
-              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Meet</h1>
-              <!-- <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Responsive Video Background Website Template Based on Bootstrap 4 to Create Complete Business Website in Minutes</p> -->
-              <!-- <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms"><i class="lnr lnr-download"></i> Download</a> -->
-            </div>
+           </div>
           </div>
         </div> 
       </div>      
