--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </section>
     <!-- Features Section End -->
 
-    <!-- Start Video promo Section -->
+    <!-- Start Video promo Section
     <section class="video-promo section" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
       <div class="container">
@@ -143,11 +143,11 @@
         </div>
       </div>
     </section>
-    <!-- End Video Promo Section -->
+    End Video Promo Section -->
 
-    <!-- Portfolio Section -->
+    <!-- Portfolio Section
     <section id="portfolios" class="section">
-      <!-- Container Starts -->
+
       <div class="container">
         <div class="section-header">          
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Our <span>Works</span></h2>
@@ -156,7 +156,7 @@
         </div>
         <div class="row">          
           <div class="col-md-12">
-            <!-- Portfolio Controller/Buttons -->
+            Portfolio Controller/Buttons
             <div class="controls text-center wow fadeInUp" data-wow-delay=".6s">
               <a class="control mixitup-control-active btn btn-common" data-filter="all">
                 All 
@@ -170,10 +170,10 @@
               <a class="control btn btn-common" data-filter=".research">
                 Print 
               </a>
-            </div>
+            </div>-->
             <!-- Portfolio Controller/Buttons Ends-->          
 
-            <!-- Portfolio Recent Projects -->
+            <!-- Portfolio Recent Projects
             <div id="portfolio" class="row wow fadeInUp" data-wow-delay="0.8s">
               <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix marketing planning">
                 <div class="portfolio-item">
@@ -239,11 +239,11 @@
           </div>
         </div>
       </div>
-      <!-- Container Ends -->
-    </section>
+       Container Ends
+    </section> -->
     <!-- Portfolio Section Ends --> 
 
-    <!-- Start Pricing Table Section -->
+    <!-- Start Pricing Table Section
     <div id="pricing" class="section pricing-section">
       <div class="container">
         <div class="section-header">          
@@ -321,7 +321,7 @@
     </div>
     <!-- End Pricing Table Section -->
 
-    <!-- Counter Section Start -->
+    <!-- Counter Section Start
     <div class="counters section" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
@@ -381,9 +381,9 @@
         </div>
       </div>
     </div>
-    <!-- Counter Section End -->
+     Counter Section End -->
 
-    <!-- testimonial Section Start -->
+    <!-- testimonial Section Start
     <div id="testimonial" class="section">
       <div class="container">
         <div class="row justify-content-md-center">
@@ -418,8 +418,8 @@
         </div>        
       </div>
     </div>
-    <!-- testimonial Section Start -->
-    <!-- Download Section Start -->
+     testimonial Section Start -->
+    <!-- Download Section Start
     <section id="download" class="section">
       <div class="container">
         <div class="section-header">          
@@ -434,11 +434,11 @@
         </div>
       </div>
     </section>
-    <!-- Download Section End -->
 
-    <!-- Blog Section -->
+
+      Blog Section -->
     <section id="blog" class="section">
-      <!-- Container Starts -->
+      <!-- Container Starts
       <div class="container">
         <div class="section-header">          
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Latest <span>Blogs</span></h2>
@@ -447,7 +447,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-            <!-- Blog Item Starts -->
+
             <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
               <div class="blog-item-img">
                 <a href="single-post.html">
@@ -468,11 +468,11 @@
                 <a href="single-post.html" class="btn btn-common btn-rm">Read More</a>
               </div>
             </div>
-            <!-- Blog Item Wrapper Ends-->
+           --> <!-- Blog Item Wrapper Ends
           </div>
 
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-            <!-- Blog Item Starts -->
+
             <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.6s">
               <div class="blog-item-img">
                 <a href="single-post.html">
@@ -493,39 +493,39 @@
                 <a href="single-post.html" class="btn btn-common btn-rm">Read More</a>
               </div>
             </div>
-            <!-- Blog Item Wrapper Ends-->
-          </div>
+             Blog Item Wrapper Ends-->
+      <!--</div>
 
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-            <!-- Blog Item Starts -->
-            <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.9s">
-              <div class="blog-item-img">
-                <a href="single-post.html">
-                  <img src="img/blog/img3.jpg" alt="">
-                </a>                
-              </div>
-              <div class="blog-item-text">    
-                <h3>
-                  <a href="#">Social media at work</a>
-                </h3>
-                <div class="meta-tags">
-                  <span class="date"><i class="lnr lnr-calendar-full"></i>on Mar 21, 2018</span>
-                  <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
-                </div>
-                <p>
-                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... 
-                </p>
-                <a href="single-post.html" class="btn btn-common btn-rm">Read More</a>
-              </div>
-            </div>
-            <!-- Blog Item Wrapper Ends-->
+      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
+         Blog Item Starts -->
+      <!--<div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.9s">
+        <div class="blog-item-img">
+          <a href="single-post.html">
+            <img src="img/blog/img3.jpg" alt="">
+          </a>
+        </div>
+        <div class="blog-item-text">
+          <h3>
+            <a href="#">Social media at work</a>
+          </h3>
+          <div class="meta-tags">
+            <span class="date"><i class="lnr lnr-calendar-full"></i>on Mar 21, 2018</span>
+            <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
+          </div>
+          <p>
+           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...
+          </p>
+          <a href="single-post.html" class="btn btn-common btn-rm">Read More</a>
+        </div>
+      </div>
+       Blog Item Wrapper Ends--><!--
           </div>
         </div>
       </div>
     </section>
-    <!-- blog Section End -->
 
-    <!-- Contact Section Start -->
+
+    Contact Section Start --><!--
     <section id="contact" class="section">
       <div class="container">
         <div class="row justify-content-md-center">          
@@ -573,9 +573,9 @@
         </div>
       </div>
     </section>
-    <!-- Contact Section End -->
 
-    <!-- Subcribe Section Start -->
+
+     Subcribe Section Start --><!--
     <div id="subscribe" class="section">
       <div class="container">
         <div class="section-header">          
@@ -593,7 +593,7 @@
         </div>
       </div>
     </div>
-    <!-- Subcribe Section End -->
+    Subcribe Section End -->
 
     <!-- Footer Section Start -->
     <footer>          
