--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                 <a class="dropdown-item" href="#">Hockey</a>
                 <a class="dropdown-item" href="#">School</a>
               </div>
+              <select class="selectpicker">
+                <option>Mustard</option>
+                <option>Ketchup</option>
+                <option>Relish</option>
+              </select>
             </div>
           </div>
       </div>
