Added map info-window

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="section-header">
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">View <span>Venues</span></h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Bouncing marker means that there's a promotion available near you for you and your group.</p>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">A bouncing marker means that there's a promotion available nearby for you and your group.</p>
         </div>
         <div class="row">
           <div class="col-12">
