--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/main.css">    
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://developers.google.com/maps/documentation/javascript/demos/demos.css">
-    <link rel="stylesheet" href="css/map-icons.min.css">
+    <!-- <link rel="stylesheet" href="css/map-icons.min.css"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="components/ListViewComponent/activitylist.css">
 
@@ -69,7 +69,7 @@
           <div class="container">
             <div class="logo-menu menu-item">
               <a href="index.html" class="logo"><img src="./img/hackatown2018.png" style="height:60px;width: 60px;"></img>HiSquad!</a>
-              <!-- button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>  -->
+              <!-- <button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>  -->
             </div>
             <div class="dropdown menu-item ">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -435,7 +435,7 @@
 
 
       Blog Section -->
-    <section id="blog" class="section">
+    <!-- <section id="blog" class="section"
       <!-- Container Starts
       <div class="container">
         <div class="section-header">          
@@ -465,8 +465,8 @@
                 </p>
                 <a href="single-post.html" class="btn btn-common btn-rm">Read More</a>
               </div>
-            </div>
-           --> <!-- Blog Item Wrapper Ends
+            </div> -->
+           <!-- Blog Item Wrapper Ends
           </div>
 
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
@@ -599,7 +599,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="site-info wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s">
-              <p>All copyrights reserved &copy; 2017 - Designed & Developed by Boys from UL</p>
+              <p>All copyrights reserved &copy; 2018 - Designed & Developed by Boys from UL</p>
             </div>  
           </div>
         </div>
@@ -681,7 +681,7 @@
     <script type="text/javascript" src="./js/form-validator.min.js"></script>
     <script type="text/javascript" src="./js/contact-form-script.js"></script>     
     <script type="text/javascript" src="./js/main.js"></script>
-    <script src="./js/map-icons.js"></script>
+    <!-- <script src="./js/map-icons.js"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-ruGMWt2QHUNlkawd7ZngZ0wtDzKNIEw&callback=initMap"
               async defer></script>
   </body>
