working with homecontroller

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="components/ListViewComponent/activitylist.css">
 
   </head>
-  <body ng-app="hackatown">
+  <body ng-app="hackatown" ng-controller="HomeCtrl">
 
   	<!-- Header Section Start -->
 
@@ -41,7 +41,7 @@
             </div>
             <div class="dropdown menu-item ">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Squads
+                My squads
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">Job</a>
