migrating to homectrl

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 My Squads
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item">Job(2)</a>
-                <a class="dropdown-item">School(3)</a>
+                <a class="dropdown-item" ng-click=selectJobGroup()>Job(2)</a>
+                <a class="dropdown-item" ng-click="selectSchoolGroup();">School(6)</a>
               </div>
             </div>
           </div>
