--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
       </div>
-    </div>    
+    </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
 	<script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
@@ -649,6 +649,7 @@
     <script type="text/javascript" src="./js/form-validator.min.js"></script>
     <script type="text/javascript" src="./js/contact-form-script.js"></script>     
     <script type="text/javascript" src="./js/main.js"></script>
+    <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
     <!-- <script src="./js/map-icons.js"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-ruGMWt2QHUNlkawd7ZngZ0wtDzKNIEw&callback=initMap"
               async defer></script>
